close #29 Cross-browser support for textContent/innerHTML