@@ -1,9 +1,3 @@
 #!/bin/bash
-# Downloads the spring-loaded lib if not existing and runs the Share AMP
-springloadedfile=~/.m2/repository/org/springframework/springloaded/1.2.0.RELEASE/springloaded-1.2.0.RELEASE.jar
 
-if [ ! -f $springloadedfile ]; then
-mvn validate -Psetup
-fi
-
-MAVEN_OPTS="-javaagent:$springloadedfile -noverify" mvn integration-test -Pamp-to-war
+MAVEN_OPTS="-Xms256m -Xmx1G -XX:PermSize=300m" mvn integration-test -Pamp-to-war -Dmaven.tomcat.port=8081
